--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!-- </section> -->
     </div>
   </div>
-<script src="/dist/bundle.js"></script>
+<script src="./dist/bundle.js"></script>
   </body>
   </html>
 
