--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class = "container">
       <form id = "search_city_form">
-        <img class ="search_icon" src = "./icons/search.png">
+        <img class ="search_icon" src = "./dist/icons/search.png">
       <input type = "search" placeholder="Enter city name">
       <br>
       <span class="error-msg">Location not valid! 😩</span>
@@ -26,10 +26,10 @@
     <div class = "temp"></div>
     <div class = "details"></div>
     <div class="box_footer"></div>
-<img class ="feels_like" src = "./icons/like_feels.svg">
-<img class ="humidity" src = "./icons/wi-humidity.svg">
-<img class ="sunrise" src = "./icons/wi-sunrise.svg">
-<img class ="sunset" src = "./icons/wi-sunset.svg">
+<img class ="feels_like" src = "./dist/icons/like_feels.svg">
+<img class ="humidity" src = "./dist/icons/wi-humidity.svg">
+<img class ="sunrise" src = "./dist/icons/wi-sunrise.svg">
+<img class ="sunset" src = "./dist/icons/wi-sunset.svg">
       <!-- <label class = "switch">
         <input type = "checkbox">
         <span class = "slider round"></span>
